Modified code and generate GWP100a results in csv file

--- a/bwLCA/Ecoinvent_bwLCA.ipynb
+++ b/bwLCA/Ecoinvent_bwLCA.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from brightway2 import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,29 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_list = db.search('electricity, high voltage, production mix', limit=10000000)"
+    "process_list = db.search(\"*\", limit=10000000) # read all processes in the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_process_list = [p for p in process_list if 'electricity, high voltage, production mix' in str(p)]"
+    "target_process_list = [p for p in process_list if 'electricity, high voltage, production mix' in str(p)] # TODO: search for processes with specific name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CC_method = [m for m in methods if 'IPCC 2013' in str(m) and  'climate change' in str(m) and 'GWP 100a' in str(m) and not 'no LT' in str(m)][0]\n",
+    "CC_method = [m for m in methods if 'IPCC 2013' in str(m) and 'climate change' in str(m) and 'GWP 100a' in str(m) and not 'no LT' in str(m)][0]\n",
     "results = {}\n",
     "for i in range(len(target_process_list)):\n",
     "    functional_unit = {target_process_list[i]: 1}\n",
@@ -63,226 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'IN-Northern grid': 1.0677367302260958,\n",
-       " 'IN-North-eastern grid': 0.6123313849107491,\n",
-       " 'CN-CSG': 0.6598178935980432,\n",
-       " 'CN-SGCC': 1.0143169619072647,\n",
-       " 'IN-Eastern grid': 1.4842452294661452,\n",
-       " 'IN-Southern grid': 1.167274019203486,\n",
-       " 'IN-Western grid': 1.3390838216057808,\n",
-       " 'SS': 0.9150586447310122,\n",
-       " 'ZA': 1.0536215414368693,\n",
-       " 'TT': 0.5873098018569624,\n",
-       " 'KH': 0.5024268820195505,\n",
-       " 'ER': 0.9107063389097284,\n",
-       " 'NI': 0.4479708389879745,\n",
-       " 'NZ': 0.09913156922388967,\n",
-       " 'TG': 0.7350837294604526,\n",
-       " 'CL': 0.5547628325625296,\n",
-       " 'DZ': 0.5728952020370499,\n",
-       " 'NG': 0.45124534564203433,\n",
-       " 'IR': 0.6039933906988977,\n",
-       " 'GI': 0.9150586447310122,\n",
-       " 'JP': 0.6624501408438142,\n",
-       " 'CM': 0.05175019377801923,\n",
-       " 'PH': 0.6979577602635494,\n",
-       " 'DO': 0.6947082451569656,\n",
-       " 'IS': 0.04314650487080552,\n",
-       " 'MT': 0.3927213477384933,\n",
-       " 'CD': 0.0048528638881824475,\n",
-       " 'JO': 0.49411080146035646,\n",
-       " 'AO': 0.20222551412433049,\n",
-       " 'VE': 0.28452092987705035,\n",
-       " 'RU': 0.6594171375547289,\n",
-       " 'EG': 0.5403285128298794,\n",
-       " 'ET': 0.005092430747102992,\n",
-       " 'NP': 0.004458748042789789,\n",
-       " 'SG': 0.4602744804716308,\n",
-       " 'CI': 0.4159970586310459,\n",
-       " 'UZ': 0.5849008149060255,\n",
-       " 'CW': 0.6157080902368485,\n",
-       " 'SV': 0.2391686818347793,\n",
-       " 'ID': 1.0815636587119015,\n",
-       " 'MD': 0.5731874240834299,\n",
-       " 'PY': 0.004401034777627603,\n",
-       " 'VN': 0.5360186559051782,\n",
-       " 'GE': 0.10370154734461434,\n",
-       " 'OM': 0.5728234812303151,\n",
-       " 'BD': 0.6615959440473209,\n",
-       " 'GT': 0.4119838134078144,\n",
-       " 'EC': 0.14695728922994333,\n",
-       " 'LY': 0.6668592887919086,\n",
-       " 'CR': 0.019634436209077195,\n",
-       " 'IL': 0.6838077041349347,\n",
-       " 'MA': 0.7318623218822501,\n",
-       " 'XK': 1.2222366434486482,\n",
-       " 'CO': 0.16196230743728532,\n",
-       " 'TH': 0.6992305302877456,\n",
-       " 'KP': 0.16530916929278833,\n",
-       " 'HK': 0.8634960646913612,\n",
-       " 'UA': 0.49551203312148595,\n",
-       " 'HN': 0.29842471519894853,\n",
-       " 'BN': 0.5828332306424557,\n",
-       " 'CY': 0.983958298096895,\n",
-       " 'NA': 0.02150904659725607,\n",
-       " 'TN': 0.5259216587477026,\n",
-       " 'MU': 0.8162255289974175,\n",
-       " 'MN': 1.1707168264867407,\n",
-       " 'MZ': 0.09731953597535797,\n",
-       " 'MX': 0.507942820642451,\n",
-       " 'KZ': 0.9674481577231338,\n",
-       " 'AZ': 0.5391622363839149,\n",
-       " 'TW': 0.7345043715471826,\n",
-       " 'AR': 0.37266723707467414,\n",
-       " 'SY': 0.6478715506743685,\n",
-       " 'GA': 0.3514056973655533,\n",
-       " 'LK': 0.5720048504587547,\n",
-       " 'PE': 0.17858247669651178,\n",
-       " 'SN': 0.8251127624710689,\n",
-       " 'KW': 0.6987151801235035,\n",
-       " 'MY': 0.7910585376157666,\n",
-       " 'AU': 0.9179157451732118,\n",
-       " 'GH': 0.29782575060085714,\n",
-       " 'KR': 0.6822750773336146,\n",
-       " 'QA': 0.5031375592556178,\n",
-       " 'TJ': 0.08110975768157275,\n",
-       " 'KG': 0.09025305300222604,\n",
-       " 'BW': 1.008741392456318,\n",
-       " 'PA': 0.17243258151798804,\n",
-       " 'YE': 0.8807246278769236,\n",
-       " 'ZM': 0.14876322489446478,\n",
-       " 'SD': 0.3604171671394559,\n",
-       " 'BY': 0.6073857960409373,\n",
-       " 'PK': 0.4585270936389938,\n",
-       " 'SA': 0.9487787796624099,\n",
-       " 'UY': 0.036990782589054354,\n",
-       " 'MM': 0.24429043848457563,\n",
-       " 'BO': 0.40745171273155006,\n",
-       " 'KE': 0.18150254134603583,\n",
-       " 'CU': 0.8573763452863136,\n",
-       " 'CG': 0.004401034777627603,\n",
-       " 'AE': 0.5044145921076997,\n",
-       " 'TM': 0.6459470922214812,\n",
-       " 'AM': 0.25795683891614357,\n",
-       " 'NE': 1.114998609236789,\n",
-       " 'BH': 0.49599090933238177,\n",
-       " 'LB': 0.8926064561327961,\n",
-       " 'ZW': 0.4424103515737893,\n",
-       " 'BJ': 0.676965987554006,\n",
-       " 'TZ': 0.5839454937851495,\n",
-       " 'JM': 0.6755263270012332,\n",
-       " 'HT': 0.7306289971564466,\n",
-       " 'IQ': 0.7375115955819158,\n",
-       " 'CA-QC': 0.015073846369949153,\n",
-       " 'PT': 0.3756007105378586,\n",
-       " 'DK': 0.28447964531181025,\n",
-       " 'FI': 0.2317354431237925,\n",
-       " 'RS': 0.8963615448197019,\n",
-       " 'BG': 0.5192579050150744,\n",
-       " 'BA': 0.8339580127920412,\n",
-       " 'LT': 0.19237208452801624,\n",
-       " 'AL': 0.004401034777627603,\n",
-       " 'HR': 0.21490347383230055,\n",
-       " 'GB': 0.2987000487678668,\n",
-       " 'HU': 0.383429089417681,\n",
-       " 'PL': 1.0141065017700097,\n",
-       " 'NL': 0.5981683794237742,\n",
-       " 'AT': 0.1427895681313834,\n",
-       " 'LV': 0.3133371523341226,\n",
-       " 'ES': 0.3082475698597917,\n",
-       " 'SI': 0.34627865826295223,\n",
-       " 'BE': 0.2272014817525188,\n",
-       " 'DE': 0.5696370428239576,\n",
-       " 'ME': 0.5110268554794999,\n",
-       " 'IT': 0.43939269770120426,\n",
-       " 'EE': 0.9695869568663564,\n",
-       " 'LU': 0.5410310925792724,\n",
-       " 'GR': 0.7840222813856228,\n",
-       " 'CZ': 0.8535002543368679,\n",
-       " 'NO': 0.009156640645159548,\n",
-       " 'FR': 0.0667973141606523,\n",
-       " 'RO': 0.38430999682372824,\n",
-       " 'MK': 0.8033122794182663,\n",
-       " 'SE': 0.027730843488235936,\n",
-       " 'SK': 0.2151413476177248,\n",
-       " 'IE': 0.38836710513487305,\n",
-       " 'TR': 0.5854755804275441,\n",
-       " 'CA-NF': 0.08103374707650826,\n",
-       " 'CA-ON': 0.06558585739417008,\n",
-       " 'CA-NT': 0.2959388691481603,\n",
-       " 'CA-SK': 0.7205447304969017,\n",
-       " 'CA-NS': 0.9270937765678248,\n",
-       " 'CA-MB': 0.05086713358020571,\n",
-       " 'CA-YK': 0.14644574932578514,\n",
-       " 'CA-AB': 0.7964463350808266,\n",
-       " 'CA-BC': 0.062056330287917745,\n",
-       " 'CA-PE': 0.018534416549266387,\n",
-       " 'CA-NB': 0.36700803878067084,\n",
-       " 'CA-NU': 1.0595743967825688,\n",
-       " 'US-NPCC': 0.2133938437721097,\n",
-       " 'US-ASCC': 0.5339889150819208,\n",
-       " 'US-TRE': 0.47640663957642154,\n",
-       " 'US-WECC': 0.41008993395269755,\n",
-       " 'US-MRO': 0.5724779744448656,\n",
-       " 'US-RFC': 0.5213764790990566,\n",
-       " 'US-SERC': 0.5240184505809363,\n",
-       " 'US-HICC': 0.8758911031394484,\n",
-       " 'BR-Southern grid': 0.12298397546292762,\n",
-       " 'BR-Northern grid': 0.14961083580848394,\n",
-       " 'BR-South-eastern grid': 0.21554513396594155,\n",
-       " 'BR-Mid-western grid': 0.12678531621953498,\n",
-       " 'BR-North-eastern grid': 0.3536792169675305,\n",
-       " 'CH': 0.017744661348701764,\n",
-       " 'US-PR': 0.7882363518798505,\n",
-       " 'CN-YN': 0.45969233658683734,\n",
-       " 'CN-GZ': 0.7848665205178662,\n",
-       " 'CN-SC': 0.2861816242293817,\n",
-       " 'CN-ZJ': 0.8346165704718664,\n",
-       " 'CN-BJ': 0.9451618664764938,\n",
-       " 'CENTREL': 0.8510893037065556,\n",
-       " 'CN-XJ': 1.1283761344928613,\n",
-       " 'CN-JX': 0.9711500666315611,\n",
-       " 'CN-JL': 1.3613159555561063,\n",
-       " 'CN-AH': 1.0232274396073213,\n",
-       " 'CN-HB': 1.2180811622997167,\n",
-       " 'CN-SX': 1.3055537835024333,\n",
-       " 'CN-TJ': 1.0754629008299197,\n",
-       " 'NORDEL': 0.05774083789393025,\n",
-       " 'CN-NM': 1.5623538705887015,\n",
-       " 'CN-FJ': 0.7953653038178149,\n",
-       " 'BR': 0.20289616577431832,\n",
-       " 'CN-XZ': 0.23889568415701037,\n",
-       " 'CN-SA': 1.0916896498224802,\n",
-       " 'CN-HN': 0.7700045460582211,\n",
-       " 'CN-HE': 1.221477607922114,\n",
-       " 'CN-GD': 0.8605377418411692,\n",
-       " 'CN-GX': 0.6663709185871691,\n",
-       " 'CN-SD': 1.194268119811118,\n",
-       " 'CN-HU': 0.4802421927452343,\n",
-       " 'CN-HA': 1.0164890867796608,\n",
-       " 'CN-CQ': 0.8687723076041168,\n",
-       " 'CN-HL': 1.396051148753889,\n",
-       " 'CN-JS': 1.0218206568330521,\n",
-       " 'CN-QH': 0.3065446100772478,\n",
-       " 'CN-NX': 1.2730921199520022,\n",
-       " 'CN-GS': 0.7456975256441275,\n",
-       " 'CN-SH': 0.8615624763531452,\n",
-       " 'CN-LN': 1.2708587929423636}"
+       "float"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "results"
+    "results_Series = pd.Series(results, name='IPCC_2013_GWP100a[kg CO2-Eq]')\n",
+    "results_Series.to_csv('GWP100a_summary.csv')"
    ]
   },
   {
