Modified generated results for OptBat project

--- a/OptBat/optbat.ipynb
+++ b/OptBat/optbat.ipynb
@@ -26,20 +26,21 @@
    "source": [
     "import xlwings as xw\n",
     "import pandas as pd\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from pandas import ExcelWriter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_name = '26012022 OptiBat_v2.xlsx' # TODO: change excel name\n",
+    "excel_name = '/Users/ocean/Desktop/OptBat/26012022 OptiBat_v2.xlsx' # TODO: change excel name\n",
     "optbat_db = pd.ExcelFile(excel_name)\n",
     "\n",
     "Today = date.today().strftime(\"%b_%m_%Y\")\n",
-    "results_path = Today+'_results'"
+    "results_path = Today+'_results.xlsx' # TODO: change results name as needed"
    ]
   },
   {
@@ -126,6 +127,7 @@
    "outputs": [],
    "source": [
     "# for i in range(len(Options_position_list)): # 11\n",
+    "target_df_dict = {}\n",
     "for j in range(len(Options_df.loc[\"G4\"])): # G4: 3\n",
     "    for k in range(len(Options_df.loc[\"G5\"])):\n",
     "        if Options_df.loc[(\"G5\", k+1), 'Options'] == 'Mit UG':\n",
@@ -150,7 +152,8 @@
     "                                            sheet_Gebäude.range(\"G13\").value = Options_df.loc[(\"G13\", x+1), 'Options']\n",
     "                                            sheet_Gebäude.range(\"G14\").value = Options_df.loc[(\"G14\", y+1), 'Options']\n",
     "                                            print([sheet_Gebäude.range(\"G\"+str(i)).value for i in range(4, 15)])\n",
-    "                                            wb.save(path=results_path+'/'+str(j+1)+'_'+str(k+1)+'_'+str(z+1)+'_'+str(m+1)+'_'+str(a+1)+'_'+str(n+1)+'_'+str(b+1)+'_'+str(c+1)+'_'+str(1)+'_'+str(x+1)+'_'+str(y+1)+'.xlsx')\n",
+    "                                            target_df_dict[str(j+1)+'_'+str(k+1)+'_'+str(z+1)+'_'+str(m+1)+'_'+str(a+1)+'_'+str(n+1)+'_'+str(b+1)+'_'+str(c+1)+'_'+str(1)+'_'+str(x+1)+'_'+str(y+1)] = pd.DataFrame(sheet_Gebäude.range(\"M4:AL16\").value)\n",
+    "                                            # wb.save(path=results_path+'/'+str(j+1)+'_'+str(k+1)+'_'+str(z+1)+'_'+str(m+1)+'_'+str(a+1)+'_'+str(n+1)+'_'+str(b+1)+'_'+str(c+1)+'_'+str(1)+'_'+str(x+1)+'_'+str(y+1)+'.xlsx')\n",
     "    else:\n",
     "        for m in range(len(Options_df.loc[\"G7\"])):\n",
     "            for n in range(len(Options_df.loc[\"G9\"])):\n",
@@ -165,16 +168,22 @@
     "                        sheet_Gebäude.range(\"G12\").value = Options_df.loc[(\"G12\", 2), 'Options']\n",
     "                        sheet_Gebäude.range(\"G13\").value = Options_df.loc[(\"G13\", x+1), 'Options']\n",
     "                        sheet_Gebäude.range(\"G14\").value = Options_df.loc[(\"G14\", y+1), 'Options']\n",
-    "                        \n",
-    "                        wb.save(path=results_path+'/'+str(j+1)+'_'+str(k+1)+'_'+str(m+1)+'_'+str(n+1)+'_'+str(2)+'_'+str(x+1)+'_'+str(y+1)+'.xlsx')"
+    "                        target_df_dict[str(j+1)+'_'+str(k+1)+'_'+str(m+1)+'_'+str(n+1)+'_'+str(2)+'_'+str(x+1)+'_'+str(y+1)] = pd.DataFrame(sheet_Gebäude.range(\"M4:AL16\").value)\n",
+    "\n",
+    "                        # wb.save(path=results_path+'/'+str(j+1)+'_'+str(k+1)+'_'+str(m+1)+'_'+str(n+1)+'_'+str(2)+'_'+str(x+1)+'_'+str(y+1)+'.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with ExcelWriter(results_path) as writer:\n",
+    "    for i in range(len(target_df_dict)):\n",
+    "        key = list(target_df_dict.keys())[i]\n",
+    "        target_df_dict[key].to_excel(writer, sheet_name=key, header=None, index=None)"
+   ]
   }
  ],
  "metadata": {
