added function to calculate results from dict input, and debugged ecoinvent import without using Activity-browser

--- a/bwLCA/Ecoinvent_bwLCA.ipynb
+++ b/bwLCA/Ecoinvent_bwLCA.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThis script is designed to prevent the usage of Activity-Browser.\\n\\nAuthor: Ao Chen. Place: UZH Zentrum. \\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This script is designed to prevent the usage of Activity-Browser.\n",
@@ -15,23 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from brightway2 import *\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "import bw2data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def project_setup(Project_name, Dataset_path, Dataset_lcia_path, Database_name):\n",
+    "def project_setup(Project_name, Dataset_path, Database_name):\n",
     "    projects.set_current(Project_name) \n",
     "    if len(Database(\"biosphere3\")) == 0: # if no biosphere3 database, set it up.\n",
     "        bw2setup()\n",
@@ -42,92 +54,25 @@
     "        ) # import ecoinvent database\n",
     "        ei38cutoff.apply_strategies()\n",
     "        ei38cutoff.statistics()\n",
-    "        ei38cutoff.write_database()\n",
-    "    if len(methods) == 0:\n",
-    "        ei38cutofflcia = SingleOutputEcospold2Importer(\n",
-    "            Dataset_lcia_path,\n",
-    "            Database_name\n",
-    "        )\n",
-    "        ei38cutofflcia.apply_strategies()\n",
-    "        ei38cutofflcia.statistics()\n",
-    "        ei38cutofflcia.write_database()"
+    "        ei38cutoff.write_database()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting XML data from 19565 datasets\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n",
-      "{http://www.EcoInvent.org/EcoSpold02}impactIndicator\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Project_name = \"Ecoinvent\" # if not exist, automatically create one\n",
     "Dataset_path = \"/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/ecoinvent 3.8_cutoff_ecoSpold02/datasets\"\n",
-    "Dataset_lcia_path = \"/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/ecoinvent 3.8_cutoff_lcia_ecoSpold02/datasets\"\n",
-    "\n",
-    "# Dataset_path = \"/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/ecoinvent 3.8_cutoff_ecoSpold02/test_dataset\"\n",
-    "# Dataset_lcia_path = \"/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/ecoinvent 3.8_cutoff_lcia_ecoSpold02/test_dataset\"\n",
-    "# substitute this with your ecoinvent datasets path (absolute path is more reliable)\n",
+    "# TODO: substitute this with your ecoinvent datasets path (absolute path is more reliable)\n",
     "Database_name = \"cutoff38\"\n",
-    "project_setup(Project_name, Dataset_path, Dataset_lcia_path, Database_name)"
+    "project_setup(Project_name, Dataset_path, Database_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculation(Database_name, Material_list_path, Impact_method):\n",
-    "    db = Database(Database_name)\n",
-    "    process_list = db.search(\"*\", limit=10000000) # read all processes in the database\n",
-    "    material_df = pd.read_excel(Material_list_path, header=None)\n",
-    "    material_df[['Activity', 'Product', 'Cutoff']] = material_df[0].str.split('|', 2, expand=True)\n",
-    "    material_df['Activity'] = material_df['Activity'].str.strip()\n",
-    "\n",
-    "    CC_method = [m for m in methods if 'IPCC 2013' in str(m) and 'climate change' in str(m) and 'GWP 100a' in str(m) and not 'no LT' in str(m)][0]\n",
-    "    results = {}\n",
-    "\n",
-    "    if not os.path.exists('calc_results_GWP100a'):\n",
-    "        os.makedirs('calc_results_GWP100a')\n",
-    "\n",
-    "    for i in range(len(material_df)):\n",
-    "        target_process_list = [p for p in process_list if material_df['Activity'][i] in str(p)] # search for processes with specific name\n",
-    "        for j in range(len(target_process_list)):\n",
-    "            functional_unit = {target_process_list[j]: 1}\n",
-    "            lca = LCA(functional_unit, CC_method)\n",
-    "            lca.lci()\n",
-    "            lca.lcia()\n",
-    "            results[dict(target_process_list[j])['location']] = lca.score\n",
-    "        results_Series = pd.Series(results, name='IPCC_2013_GWP100a[kg CO2-Eq]')\n",
-    "        results_Series.to_csv('calc_results_GWP100a/Summary_'+material_df['Activity'][i]+'.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,11 +87,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Material_list_path = 'List_of_Materials_ecoinvent.xlsx'\n",
+    "class LCA_Calculation():\n",
+    "    def __init__(self, Process_list_all, Impact_method, Result_path, Excel_path='', Process_list_target=None):\n",
+    "        self.Process_list_all = Process_list_all\n",
+    "        self.Impact_method = Impact_method\n",
+    "        self.Result_path = Result_path\n",
+    "        self.Excel_path = Excel_path\n",
+    "        self.Process_list_target = Process_list_target\n",
+    "\n",
+    "        if not os.path.exists(self.Result_path):\n",
+    "            os.makedirs(self.Result_path)\n",
+    "    \n",
+    "    def cal_from_excel(self):\n",
+    "        material_df = pd.read_excel(self.Excel_path, header=None)\n",
+    "        material_df[['Activity', 'Product', 'Cutoff']] = material_df[0].str.split('|', 2, expand=True)\n",
+    "        material_df['Activity'] = material_df['Activity'].str.strip()\n",
+    "\n",
+    "        results = {}\n",
+    "        activities = {}\n",
+    "        for i in range(len(material_df)):\n",
+    "        # for i in range(1): # for test\n",
+    "            search_process_list = [p for p in self.Process_list_all if material_df['Activity'][i] in str(p)] # search for processes with specific name\n",
+    "            for j in range(len(search_process_list)):\n",
+    "                functional_unit = {search_process_list[j]: 1}\n",
+    "                lca = LCA(functional_unit, self.Impact_method)\n",
+    "                lca.lci()\n",
+    "                lca.lcia()\n",
+    "                results[dict(search_process_list[j])['location']] = lca.score\n",
+    "                activities[dict(search_process_list[j])['location']] = dict(search_process_list[j])['name']\n",
+    "                \n",
+    "            results_Series = pd.Series(results, name='kg CO2-Eq')\n",
+    "            activities_Series = pd.Series(activities, name='activity')\n",
+    "            output_df = pd.concat([results_Series, activities_Series], axis=1)\n",
+    "            output_df.to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv')\n",
+    "            print('Results stored in' + str(os.path.abspath(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv')))\n",
+    "            \n",
+    "    def cal_from_list(self):\n",
+    "        results = {}\n",
+    "        activities = {}\n",
+    "\n",
+    "        for i in range(len(self.Process_list_target['include'])):\n",
+    "            search_process_list = [p for p in self.Process_list_all if self.Process_list_target['include'][i] in str(p) and not self.Process_list_target['not_include'][i] in str(p)]\n",
+    "            for j in range(len(search_process_list)):\n",
+    "                functional_unit = {search_process_list[j]: 1}\n",
+    "                lca = LCA(functional_unit, self.Impact_method)\n",
+    "                lca.lci()\n",
+    "                lca.lcia()\n",
+    "                results[dict(search_process_list[j])['location']] = lca.score\n",
+    "                activities[dict(search_process_list[j])['location']] = dict(search_process_list[j])['name']\n",
+    "\n",
+    "            results_Series = pd.Series(results, name='kg CO2-Eq')\n",
+    "            activities_Series = pd.Series(activities, name='activity')\n",
+    "            output_df = pd.concat([results_Series, activities_Series], axis=1)\n",
+    "            output_df.to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv')\n",
+    "            print('Results stored in' + str(os.path.abspath(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Impact_method = [m for m in methods if 'IPCC 2013' in str(m) and 'climate change' in str(m) and 'GWP 100a' in str(m) and not 'no LT' in str(m)][0]\n",
     "Today = date.today().strftime(\"%b_%m_%Y\")\n",
-    "Result_path = Today+'_calc_results_GWP100a'\n",
-    "lca_calculation(Process_list, Material_list_path, Impact_method, Result_path)\n",
+    "Result_path = Today+'_calc_results_GWP100a_test'\n",
+    "\n",
+    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional\n",
+    "Process_list_target = {\n",
+    "    'include': ['market for electricity, medium voltage'], # key words you want to include\n",
+    "    'not_include': ['municipal waste'] # key words you do not want to include\n",
+    "} # optional\n",
+    "\n",
+    "instance1 = LCA_Calculation(Process_list_all, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target)\n",
+    "instance1.cal_from_excel() # input Excel\n",
+    "instance1.cal_from_list() # input list (in fact a dict)\n",
+    "\n",
     "# TODO: change names above as you need"
    ]
   }
