--- a/bwLCA/Test_bwLCA.ipynb
+++ b/bwLCA/Test_bwLCA.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThis script can be used after manually importing ecoinvent in Activity_Browser.\\nLook for TODO to define your own variable names as you need.\\n\\nAuthor: Ao Chen. Place: UZH Zentrum. \\n'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This script can be used after manually importing ecoinvent in Activity_Browser.\n",
@@ -16,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,57 +62,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lca_calculation(Process_list, Material_list_path, Impact_method, Result_path):\n",
-    "    material_df = pd.read_excel(Material_list_path, header=None)\n",
-    "    material_df[['Activity', 'Product', 'Cutoff']] = material_df[0].str.split('|', 2, expand=True)\n",
-    "    material_df['Activity'] = material_df['Activity'].str.strip()\n",
-    "\n",
-    "    results = {}\n",
-    "\n",
-    "    if not os.path.exists(Result_path):\n",
-    "        os.makedirs(Result_path)\n",
-    "\n",
-    "    for i in range(len(material_df)):\n",
-    "    # for i in range(1): # for test\n",
-    "        target_process_list = [p for p in Process_list if material_df['Activity'][i] in str(p)] # search for processes with specific name\n",
-    "        # target_process_list = [p for p in Process_list if 'boron carbide production' in str(p)] # for test\n",
-    "        for j in range(len(target_process_list)):\n",
-    "            functional_unit = {target_process_list[j]: 1}\n",
-    "            lca = LCA(functional_unit, Impact_method)\n",
-    "            lca.lci()\n",
-    "            lca.lcia()\n",
-    "            results[dict(target_process_list[j])['location']] = lca.score\n",
-    "        results_Series = pd.Series(results, name=Result_path+'[kg CO2-Eq]')\n",
-    "        results_Series.to_csv(Result_path+'/Summary_'+material_df['Activity'][i]+'.csv')\n",
-    "        # results_Series.to_csv(Result_path+'/Summary_boron carbide production.csv') # for test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "db = Database(Database_name)\n",
-    "Process_list = db.search(\"*\", limit=10000000) # read all processes in the database\n",
+    "Process_list_all = db.search(\"*\", limit=10000000) # read all processes in the database\n",
     "# TODO: this process is time consuming, run once is enough!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Material_list_path = 'List_of_Materials_ecoinvent.xlsx'\n",
+    "class LCA_Calculation():\n",
+    "    def __init__(self, Process_list_all, Impact_method, Result_path, Excel_path='', Process_list_target=None):\n",
+    "        self.Process_list_all = Process_list_all\n",
+    "        self.Impact_method = Impact_method\n",
+    "        self.Result_path = Result_path\n",
+    "        self.Excel_path = Excel_path\n",
+    "        self.Process_list_target = Process_list_target\n",
+    "\n",
+    "        if not os.path.exists(self.Result_path):\n",
+    "            os.makedirs(self.Result_path)\n",
+    "    \n",
+    "    def cal_from_excel(self):\n",
+    "        material_df = pd.read_excel(self.Excel_path, header=None)\n",
+    "        material_df[['Activity', 'Product', 'Cutoff']] = material_df[0].str.split('|', 2, expand=True)\n",
+    "        material_df['Activity'] = material_df['Activity'].str.strip()\n",
+    "\n",
+    "        results = {}\n",
+    "        activities = {}\n",
+    "        for i in range(len(material_df)):\n",
+    "        # for i in range(1): # for test\n",
+    "            search_process_list = [p for p in self.Process_list_all if material_df['Activity'][i] in str(p)] # search for processes with specific name\n",
+    "            for j in range(len(search_process_list)):\n",
+    "                functional_unit = {search_process_list[j]: 1}\n",
+    "                lca = LCA(functional_unit, self.Impact_method)\n",
+    "                lca.lci()\n",
+    "                lca.lcia()\n",
+    "                results[dict(search_process_list[j])['location']] = lca.score\n",
+    "                activities[dict(search_process_list[j])['location']] = dict(search_process_list[j])['name']\n",
+    "                \n",
+    "            results_Series = pd.Series(results, name='kg CO2-Eq')\n",
+    "            activities_Series = pd.Series(activities, name='activity')\n",
+    "            output_df = pd.concat([results_Series, activities_Series], axis=1)\n",
+    "            output_df.to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv')\n",
+    "            print('Results stored in' + str(os.path.abspath(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv')))\n",
+    "            \n",
+    "    def cal_from_list(self):\n",
+    "        results = {}\n",
+    "        activities = {}\n",
+    "\n",
+    "        for i in range(len(self.Process_list_target['include'])):\n",
+    "            search_process_list = [p for p in self.Process_list_all if self.Process_list_target['include'][i] in str(p) and not self.Process_list_target['not_include'][i] in str(p)]\n",
+    "            for j in range(len(search_process_list)):\n",
+    "                functional_unit = {search_process_list[j]: 1}\n",
+    "                lca = LCA(functional_unit, self.Impact_method)\n",
+    "                lca.lci()\n",
+    "                lca.lcia()\n",
+    "                results[dict(search_process_list[j])['location']] = lca.score\n",
+    "                activities[dict(search_process_list[j])['location']] = dict(search_process_list[j])['name']\n",
+    "\n",
+    "            results_Series = pd.Series(results, name='kg CO2-Eq')\n",
+    "            activities_Series = pd.Series(activities, name='activity')\n",
+    "            output_df = pd.concat([results_Series, activities_Series], axis=1)\n",
+    "            output_df.to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv')\n",
+    "            print('Results stored in' + str(os.path.abspath(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv')))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_concrete block production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_market for electricity, medium voltage.csv\n"
+     ]
+    }
+   ],
+   "source": [
     "Impact_method = [m for m in methods if 'IPCC 2013' in str(m) and 'climate change' in str(m) and 'GWP 100a' in str(m) and not 'no LT' in str(m)][0]\n",
     "Today = date.today().strftime(\"%b_%m_%Y\")\n",
-    "Result_path = Today+'_calc_results_GWP100a'\n",
-    "lca_calculation(Process_list, Material_list_path, Impact_method, Result_path)\n",
+    "Result_path = Today+'_calc_results_GWP100a_test'\n",
+    "\n",
+    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional\n",
+    "Process_list_target = {\n",
+    "    'include': ['market for electricity, medium voltage'], # key words you want to include\n",
+    "    'not_include': ['municipal waste'] # key words you do not want to include\n",
+    "} # optional\n",
+    "\n",
+    "instance1 = LCA_Calculation(Process_list_all, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target)\n",
+    "instance1.cal_from_excel() # input Excel\n",
+    "instance1.cal_from_list() # input list (in fact a dict)\n",
+    "\n",
     "# TODO: change names above as you need"
    ]
   }
